[package]
name = "papilo-sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for the PaPILO library"
links = "papilo-core"
repository = "https://github.com/mmghannam/papilo-sys"
license = "Apache-2.0"
authors = ["Mohammed Ghannam <ghannam@zib.de>"]

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1.52"
